--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,6 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <h1>Lasagna Recipe</h1>
     </body>
 </html>
