--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/spaghetti-sauce.html">Spaghetti Sauce</a></li>
+            <li><a href="recipes/jalapeno-steak.html">Jalapeno Steak</a></li>
         </ul>
     </body>
 </html>
