--- a/recipes/jalapeno-steak.html
+++ b/recipes/jalapeno-steak.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Spaghetti Sauce</h1>
+        <h1>Jalapeno Steak</h1>
         <img src="../images/jalapeno-steak.jpg" alt="Picture of Jalapeno Steak">
         <h3>Description</h3>
         <p>Jalapenos mixed with the other ingredients give a spicy and delicious kick to grilled steak. Marinate this steak in the fridge for up to 24 hours before cooking.</p>
